<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- Skip button -->
  <Button
      android:id="@+id/btnSkip"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/onboarding_skip"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:textColor="?attr/colorPrimaryVariant"
      android:padding="8dp"
      android:layout_margin="16dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <!-- ViewPager2 -->
  <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/viewPager"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/btnSkip"
      app:layout_constraintBottom_toTopOf="@+id/layoutBottom"/>

  <!-- Bottom navigation -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/layoutBottom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginBottom="16dp"
      android:paddingHorizontal="16dp"
      android:paddingVertical="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">


<!--    <Button-->
<!--        android:id="@+id/btnPrev"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/button_rounded_background"-->
<!--        android:backgroundTint="?attr/colorSecondaryVariant"-->
<!--        android:text="@string/onboarding_prev"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_prev"
        android:textColor="?attr/colorOnSecondary"
        app:icon="@drawable/rounded_arrow_back_24"
        app:iconTint="?attr/colorOnSecondary"
        app:iconGravity="textStart"
        app:backgroundTint="?attr/colorSecondaryVariant"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




    <LinearLayout
        android:id="@+id/dotsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/btnNext"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@drawable/button_rounded_background"-->
<!--        android:backgroundTint="?attr/colorSecondaryVariant"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/onboarding_next"-->
<!--        android:textAlignment="center"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_next"
        android:textColor="?attr/colorOnPrimary"
        app:icon="@drawable/rounded_arrow_forward_24"
        app:iconTint="?attr/colorOnPrimary"
        app:iconGravity="textEnd"
        app:backgroundTint="?attr/colorPrimary"
        style="?attr/materialIconButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




    <!--<?xml version="1.0" encoding="utf-8"?>-->

<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--  <androidx.viewpager2.widget.ViewPager2-->
<!--      android:id="@+id/viewPager"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="match_parent"/>-->
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->


<!--<androidx.constraintlayout.widget.ConstraintLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:id="@+id/main"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".onboarding.OnboardingActivity">-->

<!--  </androidx.constraintlayout.widget.ConstraintLayout>-->